--- a/platform/viewer/src/components/UserPreferences/AWSAccessKeyFields.styl
+++ b/platform/viewer/src/components/UserPreferences/AWSAccessKeyFields.styl
@@ -40,7 +40,7 @@
   position: relative;
   overflow: hidden;
   display: inline-block;
-  cursor pointer
+  cursor: pointer;
 
 .btn
   border: 2px solid gray;
