--- a/platform/viewer/src/connectedComponents/ToolbarRow.css
+++ b/platform/viewer/src/connectedComponents/ToolbarRow.css
@@ -2,9 +2,8 @@
     border-bottom: var(--ui-border-thickness) solid var(--ui-border-color);
     flex: 0 0 auto;
     height: var(--toolbar-height);
-    /* padding-left: 1rem;
-    padding-right: 1rem; */
-    padding: 0px;
+    padding-left: 1rem;
+    padding-right: 1rem;
     position: relative;
     transition: height 300ms ease;
     width: 100%;
