--- a/platform/viewer/src/connectedComponents/Viewer.css
+++ b/platform/viewer/src/connectedComponents/Viewer.css
@@ -11,20 +11,18 @@
 
 .view-inline {
   display: flex;
-  height:100vh
 }
 
 .toolbar-section {
   display: flex;
   flex-direction: column;
-  width: 110px;
+  width: auto;
   /* height: calc(100vh - 160px) !important; */
   justify-content: space-between;
   align-items: center;
   height: 100vh;
   border: none;
   overflow-y: scroll;
-  overflow-x: hidden;
 }
 
 ::-webkit-scrollbar-track {
@@ -39,8 +37,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #beedff;
-  border-radius: 20px;
+  background-color: #e6dada;
 }
 
 
