--- a/platform/ui/src/components/studyList/StudyList.styl
+++ b/platform/ui/src/components/studyList/StudyList.styl
@@ -104,7 +104,7 @@ placeholder-color(c)
 .study-list-container
   width: 100%
   padding: 0 $study-list-padding
-  position: absolute
+  // position: absolute
   z-index: 2
 
 table.table
@@ -127,12 +127,12 @@ table.table
 
   /* Striped Variant */
   &.table--striped > tbody tr:nth-child(even)
-    background-color: var(--ui-gray-darker)
+    // background-color: var(--ui-gray-darker)
 
   /* Hover Variant */
   &.table--hoverable > tbody tr
     &:hover, &:active, &.active
-      background-color: var(--table-hover-color)
+      // background-color: var(--table-hover-color)
     &.no-hover
       &:hover, &:active, &.active
         background-color: var(--ui-gray-darker)
